syntax = "proto3";

package com.jamshedalamqaderi.grpc.protos;

option java_multiple_files = true;

message KTransportModel {
  string reference = 1;
  string payload = 2;
}

service KTransportService {
  rpc apiRequest (KTransportModel) returns (KTransportModel);

  rpc streamRequest (KTransportModel) returns (stream KTransportModel);
}